# AMIGO

./: .gitignore  .gitmodules  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE
R/: BRoptions.R  RcppExports.R
man/: AMIGO-package.Rd
src/: CMakeLists.txt  RcppExports.cpp  Rwrapper.cpp
